// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing <MultipleCustomHooks /> 1. SnapShot without data 1`] = `
<div>
  <h1>
    BreakingBad Quotes
  </h1>
  <hr />
  <div
    className="alert alert-info text-center"
  >
    Loading...
  </div>
  <button
    className="btn btn-primary"
    onClick={[Function]}
  >
    Next quote
  </button>
</div>
`;

exports[`Testing <MultipleCustomHooks /> 2. SnapShot with data 1`] = `
<div>
  <h1>
    BreakingBad Quotes
  </h1>
  <hr />
  <blockquote
    className="blockquote text-right"
  >
    <p
      className="mb-0"
    >
       
      Hello Sexy
       
    </p>
    <footer
      className="blockquote-footer"
    >
       
      Jorge
       
    </footer>
  </blockquote>
  <button
    className="btn btn-primary"
    onClick={[Function]}
  >
    Next quote
  </button>
</div>
`;
